# wiri

./: Cargo.toml
crates/wiri-cli/: Cargo.toml
crates/wiri-cli/src/: main.rs
crates/wiri-core/: Cargo.toml
crates/wiri-core/src/: lib.rs
crates/wiri-daemon/: Cargo.toml
crates/wiri-daemon/src/: main.rs
